--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,62 @@
-anyio==4.0.0
+appnope==0.1.3
+astroid==3.0.1
+asttokens==2.4.1
 beautifulsoup4==4.12.2
-bitarray==2.8.2
+black==23.10.1
 bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
-dnspython==2.4.2
-email-validator==2.1.0.post1
+coverage==7.3.2
+decorator==5.1.1
+dill==0.3.7
 exceptiongroup==1.1.3
-fastapi==0.89.0
+executing==2.0.1
 filelock==3.13.1
 fsspec==2023.10.0
-gunicorn==20.1.0
-h11==0.14.0
-httpcore==1.0.1
-httptools==0.6.1
-httpx==0.25.1
 huggingface-hub==0.17.3
 idna==3.4
-itsdangerous==2.1.2
+iniconfig==2.0.0
+ipython==8.17.2
+isort==5.12.0
+jedi==0.19.1
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mccabe==0.7.0
 mpmath==1.3.0
+mypy-extensions==1.0.0
 networkx==3.2.1
 numpy==1.26.1
-orjson==3.9.10
 packaging==23.2
-pdfreader==0.1.12
-Pillow==10.1.0
-pycryptodome==3.19.0
-pydantic==1.10.13
+parso==0.8.3
+pathspec==0.11.2
+pexpect==4.8.0
+platformdirs==3.11.0
+pluggy==1.3.0
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.16.1
+pylint==3.0.2
 PyPDF2==3.0.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
+pytest==7.4.3
+pytest-cov==4.1.0
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 safetensors==0.4.0
 six==1.16.0
-sniffio==1.3.0
 soupsieve==2.5
-starlette==0.22.0
+stack-data==0.6.3
 sympy==1.12
 tokenizers==0.14.1
+tomli==2.0.1
+tomlkit==0.12.2
 torch==2.1.0
 tqdm==4.66.1
+traitlets==5.13.0
 transformers==4.35.0
 typing_extensions==4.8.0
-ujson==5.8.0
 urllib3==2.0.7
-uvicorn==0.20.0
-uvloop==0.19.0
-watchfiles==0.21.0
-websockets==12.0
+wcwidth==0.2.9
